--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="line-element1"></div>
+    <div class="line-element2"></div>
+    <div class="line-element3"></div>
     <div class="sate-hover">
       <div class="navbar">
         <h1>State: Hover</h1>
@@ -26,9 +29,11 @@
         </h1>
         <p>Secure your spot at next year’s biggest coding conference.</p>
         <form>
-          <label for="file-upload" class="custom-file-upload">
+          <h4>Upload Avatar</h4>
+
+          <label  class="custom-file-upload">
+            <img src="images/icon-upload.svg" alt="" />
             <input type="file" id="file-upload" />
-            <img class="custom-img" src="images/icon-upload.svg" alt="" />
             Drag and Drop Your File Here
           </label>
           <h4>Full Name</h4>
