--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </h1>
           <p>Secure your spot at next year’s biggest coding conference.</p>
           <form>
-            <h4>Upload Avatar</h4>
+            <label>Upload Avatar</label>
 
             <label class="custom-file-upload">
               <img src="images/icon-upload.svg" alt="" />
@@ -35,22 +35,14 @@
               Drag and Drop Your File Here
             </label>
 
-            <label for="full-name">Full Name</label>
-            <input id="full-name" type="text" placeholder="Your full name" />
+            <label>Full Name</label>
+            <input type="text" placeholder="Your full name" />
 
-            <label for="email-address">Email Address</label>
-            <input
-              id="email-address"
-              type="email"
-              placeholder="example@email.com"
-            />
+            <label>Email Address</label>
+            <input type="email" placeholder="example@email.com" />
 
-            <label for="github-username">GitHub Username</label>
-            <input
-              id="github-username"
-              type="text"
-              placeholder="@yourusername"
-            />
+            <label>GitHub Username</label>
+            <input type="text" placeholder="@yourusername" />
 
             <button type="submit">Generate My Ticket</button>
           </form>
